logon mobile menu linked to homepage on all pages and margin fix

--- a/CSS/slick-theme.css
+++ b/CSS/slick-theme.css
@@ -12,7 +12,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
 /* Arrows */
 .slick-prev,
 .slick-next {
@@ -31,7 +30,6 @@
   border: none;
   outline: none;
 }
-
 .slick-prev:hover, .slick-prev:focus,
 .slick-next:hover,
 .slick-next:focus {
@@ -39,18 +37,15 @@
   background: transparent;
   color: transparent;
 }
-
 .slick-prev:hover:before, .slick-prev:focus:before,
 .slick-next:hover:before,
 .slick-next:focus:before {
   opacity: 1;
 }
-
 .slick-prev.slick-disabled:before,
 .slick-next.slick-disabled:before {
   opacity: 0.25;
 }
-
 .slick-prev:before,
 .slick-next:before {
   font-family: "slick";
@@ -65,34 +60,28 @@
 .slick-prev {
   left: -25px;
 }
-
-[dir="rtl"] .slick-prev {
+[dir=rtl] .slick-prev {
   left: auto;
   right: -25px;
 }
-
 .slick-prev:before {
   content: "←";
 }
-
-[dir="rtl"] .slick-prev:before {
+[dir=rtl] .slick-prev:before {
   content: "→";
 }
 
 .slick-next {
   right: -25px;
 }
-
-[dir="rtl"] .slick-next {
+[dir=rtl] .slick-next {
   left: -25px;
   right: auto;
 }
-
 .slick-next:before {
   content: "→";
 }
-
-[dir="rtl"] .slick-next:before {
+[dir=rtl] .slick-next:before {
   content: "←";
 }
 
@@ -113,7 +102,6 @@
   border: none;
   line-height: 25px;
 }
-
 .slick-dots li {
   border: none;
   position: relative;
@@ -124,7 +112,6 @@
   padding: 0;
   cursor: pointer;
 }
-
 .slick-dots li button {
   border: none;
   background: transparent;
@@ -138,7 +125,6 @@
   padding: 5px;
   cursor: pointer;
 }
-
 .slick-dots li button:before {
   position: absolute;
   top: 0;
@@ -153,9 +139,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 .slick-dots li.slick-active button:before {
   line-height: 50px;
   font-size: 50px;
-}
-/*# sourceMappingURL=slick-theme.css.map */
+}/*# sourceMappingURL=slick-theme.css.map */
