--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1052,7 +1052,7 @@ p {
 
   #navbar-logo {
     display: inline-block;
-    margin-left: -360px;
+    margin-left: -160px;
   }
 
   #navbar-logo:hover {
@@ -1086,7 +1086,7 @@ p {
   }
 
   #mobile-menu {
-    margin-right: 40px;
+    margin-right: 15px;
     position: absolute;
     top: 12%;
     right: 5%;
