--- a/SCSS/content/_menu.scss
+++ b/SCSS/content/_menu.scss
@@ -114,7 +114,7 @@
 
     #navbar-logo{
         display: inline-block;
-        margin-left: -360px;
+        margin-left: -160px;
     }
 
     #navbar-logo:hover{
@@ -150,7 +150,7 @@
     }
 
     #mobile-menu{
-        margin-right: 40px;
+        margin-right: 15px;
         position: absolute;
         top: 12%;
         right: 5%;
